[package]
name = "gevlib"
version = "0.1.0"
edition = "2021"
keywords = ["gev", "statistics"]
description = "A Rust library containing distributional quantities (CDF, PDF, Quantile, random generation) of the Extreme Value Distributions."
repository = "https://github.com/HaeckGabriel/gevdist_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
